[package]
name = "filler-visualizer"
version = "0.1.0"
authors = ["BatteredBunny <ayes2022@protonmail.com>"]
edition = "2021"
repository = "https://github.com/BatteredBunny/filler-visualizer"

[dependencies]
bevy = "0.9.1"
bevy_egui = "0.18.0"
bevy_flycam = "0.9.0"
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
